# playground-api

./: .gitignore  Cargo.toml  Dockerfile.db  Justfile  LICENSE  README.md  compose.dev.yml  compose.prod.yml  compose.yml  docker-compose.prod.yml  docker-compose.yml  postgresql.dev.conf  postgresql.prod.conf
docker/api/: Dockerfile
docker/postgres/: Dockerfile  postgresql.prod.conf
docs/: architecture.md  code-structure.md  deployment.md  development.md
migrations/: 20260215185520_initial_schema.down.sql  20260215185520_initial_schema.up.sql
src/: config.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/api/: error.rs  mod.rs  router.rs  state.rs
src/api/authentication/: authenticated_identity.rs  current_identity.rs  mod.rs  request_authenticator.rs
src/api/handlers/: mod.rs
src/api/handlers/accounts/: routes.rs
src/api/handlers/accounts/auth/: login.rs  logout.rs  mod.rs  refresh_token.rs  register.rs  routes.rs  token.rs  token_revoke.rs
src/api/handlers/accounts/me/: change_my_password.rs  mod.rs  routes.rs
src/api/handlers/accounts/users/: routes.rs
src/api/handlers/identity/: mod.rs  register_user.rs  routes.rs
src/api/handlers/identity/auth/: register.rs  routes.rs
src/api/handlers/identity/me/: change_my_password.rs  routes.rs
src/api/handlers/identity/users/: routes.rs
src/api/handlers/platform/auth/: login.rs  logout.rs  refresh_token.rs  register.rs  token.rs  token_revoke.rs
src/api/handlers/platform/me/: change_my_password.rs
src/api/handlers/platform/users/: routes.rs
src/application/: error.rs  mod.rs
src/application/accounts/: mod.rs
src/application/accounts/commands/: mod.rs
src/application/accounts/commands/auth/: issued_tokens.rs  mod.rs
src/application/accounts/commands/me/: mod.rs
src/application/accounts/policies/: user_policy.rs
src/application/authentication/: authenticated_identity.rs  mod.rs
src/application/authorization/: authorizer.rs  mod.rs  principal.rs
src/application/identity/commands/: mod.rs  register_user.rs
src/application/identity/policies/: mod.rs  user_policy.rs
src/application/platform/: mod.rs
src/application/platform/authentication/: authenticated_identity.rs  authentication_context.rs  authentication_outcome.rs  authenticator.rs  mod.rs
src/application/platform/authentication/ports/: access_token_issuer.rs  mod.rs  opaque_token_hasher.rs  opaque_token_issuer.rs  refresh_token_hasher.rs  refresh_token_issuer.rs  refresh_token_repository.rs  refresh_token_service.rs  refresh_token_store.rs  token_generator.rs
src/application/platform/authorization/: authorizer.rs  mod.rs  principal.rs
src/application/platform/authorization/ports/: mod.rs  principal_loader.rs
src/application/platform/identity/policies/: user_policy.rs
src/application/ports/: mod.rs  principal_loader.rs  refresh_token_repository.rs  token_generator.rs  transaction.rs
src/application/shared/: mod.rs
src/domain/: mod.rs
src/domain/accounts/: error.rs
src/domain/accounts/entities/: user.rs
src/domain/accounts/ports/: mod.rs  password_hasher.rs  user_repository.rs
src/domain/accounts/values/: email.rs  permission.rs  username.rs
src/domain/identity/: error.rs  mod.rs
src/domain/identity/entities/: user.rs
src/domain/identity/ports/: mod.rs  password_hasher.rs  user_repository.rs
src/domain/identity/values/: email.rs  mod.rs  password.rs  permission.rs  role.rs  user_id.rs  username.rs
src/domain/platform/identity/: error.rs  mod.rs
src/domain/platform/identity/entities/: user.rs
src/domain/platform/identity/ports/: password_hasher.rs  user_repository.rs
src/domain/platform/identity/values/: email.rs  password.rs  permission.rs  role.rs  username.rs
src/domain/shared/: error.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/auth/: jwt.rs  mod.rs
src/infrastructure/authentication/: composite_request_authenticator.rs  mod.rs  refresh_token_service.rs
src/infrastructure/authentication/jwt/: claims.rs  mod.rs  provider.rs  request_authenticator.rs  verifier.rs
src/infrastructure/authentication/session/: fred_store.rs  request_authenticator.rs  session_record.rs
src/infrastructure/authorization/: mod.rs  permission_authorizer.rs
src/infrastructure/crypto/: argon2.rs  mod.rs
src/infrastructure/crypto/opaque_token_hashers/: blake3.rs  mod.rs  sha256.rs
src/infrastructure/crypto/opaque_token_issuers/: mod.rs  random.rs
src/infrastructure/crypto/password_hashers/: argon2.rs  bcrypt.rs  mod.rs
src/infrastructure/db/: mod.rs  postgres.rs
src/infrastructure/db/postgres/: mod.rs  pool.rs  transaction.rs
src/infrastructure/db/redis/: client.rs  mod.rs
src/infrastructure/platform/authentication/: composite_authenticator.rs  composite_request_authenticator.rs  mod.rs  sha256_refresh_token_codec.rs
src/infrastructure/platform/authentication/jwt/: access_token_issuer.rs  bearer_authenticator.rs  claims.rs  mod.rs  provider.rs  request_authenticator.rs
src/infrastructure/platform/authentication/refresh_tokens/: mod.rs
src/infrastructure/platform/authentication/session/: authenticator.rs  mod.rs  request_authenticator.rs  session_record.rs
src/infrastructure/platform/authorization/: mod.rs  permission_authorizer.rs
src/infrastructure/platform/authorization/principals/: assembly.rs
src/infrastructure/platform/identity/: mod.rs
src/infrastructure/platform/identity/users/: assembly.rs  mod.rs
src/infrastructure/repositories/accounts/: mod.rs
src/infrastructure/repositories/accounts/principals/: assembly.rs  mod.rs
src/infrastructure/repositories/accounts/refresh_tokens/: mod.rs
src/infrastructure/repositories/accounts/users/: assembly.rs
src/infrastructure/repositories/identity/: mod.rs
src/infrastructure/repositories/identity/principals/: assembly.rs
src/infrastructure/repositories/identity/principles/: mod.rs  postgres.rs  rows.rs
src/infrastructure/repositories/identity/users/: assembly.rs  mapper.rs  mod.rs  postgres.rs  rows.rs
src/interfaces/http/: mod.rs
src/interfaces/http/axum/: mod.rs  router.rs  state.rs
(+86 files in other folders)
